--- a/.github/workflows/generate_m3u.yml
+++ b/.github/workflows/generate_m3u.yml
@@ -38,4 +38,8 @@ jobs:
         git config --global user.email "actions@github.com"
         git add rectv_full.m3u
         git diff --cached --quiet || git commit -m "Auto: M3U Update $(date +'%Y-%m-%d %H:%M')"
+        git push        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git add rectv_full.m3u
+        git diff --cached --quiet || git commit -m "Auto: M3U Update $(date +'%Y-%m-%d %H:%M')"
         git push
